<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="8dp"
    android:layout_marginHorizontal="8dp"
    android:background="@color/white"
    android:foreground="?android:attr/selectableItemBackground">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/request_ava"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/request_nama"
        android:layout_width="319dp"
        android:layout_height="29dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="20dp"
        android:text="@string/bimbingan_nama_2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/request_ava"
        app:layout_constraintTop_toTopOf="@+id/request_ava" />

    <TextView
        android:id="@+id/request_nim"
        android:layout_width="319dp"
        android:layout_height="26dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="32dp"
        android:text="@string/bimbingan_nim_2"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/request_nama"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/request_nama"
        app:layout_constraintTop_toBottomOf="@+id/request_nama" />

    <TextView
        android:id="@+id/request_skripsi"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="32dp"
        android:text="@string/skripsi1"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/request_nama"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/request_nama"
        app:layout_constraintTop_toBottomOf="@+id/request_nim" />

    <View
        android:id="@+id/request_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        android:onClick="onClick_bimbingan_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_skripsi" />


</androidx.constraintlayout.widget.ConstraintLayout>